--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "tsa-app",
+  "name": "the-smith-agency-crm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node scripts/seedDatabase.mjs"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@faker-js/faker": "^8.4.1",
+    "@headlessui/react": "^1.7.19",
+    "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.475.0",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
