--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.19",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
