--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "next": "13.4.19",
+    "openai": "^4.85.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
